Load Base64.js and mustache.js from cdnjs. Use btoa() instead of Base64.encode() to encode string. Removed trailing space characters.
This commit is the last commit which is compatible with aria2
1.15.x.

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
       </div>
     </div>
   </div>
-  <script type="application/javascript" src="base64-min.js"></script>
-  <script type="application/javascript" src="mustache-0.8.1.js"></script>
+  <script type="application/javascript" src="//cdnjs.cloudflare.com/ajax/libs/Base64/0.3.0/base64.min.js"></script>
+  <script type="application/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
   <script type="application/javascript" src="remote.js"></script>
 </body>
 </html>
