UI changes. Adjusted the styling of header text.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="top-panel">
-    <h1>Remote</h1>
+    <div class="header-text">Remote</div>
     <p>
       Version: <span id="aria2-version">N/A</span>
       Upload: <span id="global-upload-speed" class="speed">N/A</span>
@@ -52,11 +52,11 @@
   <div id="error-message"></div>
   <div id="downloads-box">
     <div>
-      <h2>Active downloads</h2>
+      <div class="header-text downloads-box-header-text">Active downloads</div>
       <div id="active-downloads"></div>
     </div>
     <div>
-      <h2>Inactive downloads</h2>
+      <div class="header-text downloads-box-header-text">Inactive downloads</div>
       <div id="inactive-downloads"></div>
     </div>
   </div>
