--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
       </div>
     </div>
   </div>
-  <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js" integrity="sha256-iaqfO5ue0VbSGcEiQn+OeXxnxAMK2+QgHXIDA5bWtGI=" crossorigin="anonymous"></script>
+  <script type="application/javascript"
+    src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"
+    integrity="sha256-iaqfO5ue0VbSGcEiQn+OeXxnxAMK2+QgHXIDA5bWtGI="
+    crossorigin="anonymous"></script>
   <script type="application/javascript" src="index.js"></script>
 </body>
 </html>
